<resources>
    <string name="app_name">NdroidTracker</string>
    <string name="hint_device_name">Device Name</string>
    <string name="hint_device_pass">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="locked">Locked</string>
    <string name="storage_encryption">Storage Encryption</string>
    <string name="wipe_data">Wipe Data</string>
    <string name="reboot">Reboot</string>
    <string name="sign_out">Sign Out</string>
    <string name="track_location">Track Location</string>
    <string name="frequency">Frequency</string>
    <string name="ring">Ring</string>
    <string name="freeze">Freeze</string>
    <string name="ip_address">IP Address</string>
    <string name="refresh">Refresh</string>
    <string name="simulate">Simulate</string>
    <string name="enabled">Enabled</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_description">Description</string>
    <string name="send">Send</string>

</resources>
