<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <!-- Enabled -->
    <Switch
        android:id="@+id/alert_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/enabled"
        android:textSize="15sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneText"
        android:layout_margin="10dp"
        android:hint="@string/hint_phone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailText"
        android:layout_margin="10dp"
        android:hint="@string/hint_email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionText"
        android:layout_margin="10dp"
        android:hint="@string/hint_description"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sendButton"
        android:layout_margin="10dp"
        android:text="@string/send"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"/>

</LinearLayout>