<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <!-- Locked -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/locked"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:layout_marginStart="25dp" />

        <Switch
            android:id="@+id/locked_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="15dp"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!-- Reboot -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:text="@string/reboot"
            android:textColor="@android:color/black" />

        <Switch
            android:id="@+id/reboot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!-- Ring -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:text="@string/ring"
            android:textColor="@android:color/black" />

        <Switch
            android:id="@+id/ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="12dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!-- Freeze -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:text="@string/freeze"
            android:textColor="@android:color/black" />

        <Switch
            android:id="@+id/freeze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!-- Track Location -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Track Location -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:text="@string/track_location"
            android:textColor="@android:color/black"
            android:layout_alignBaseline="@+id/track"/>

        <Switch
            android:id="@+id/track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            />

        <!-- Location Frequency -->

        <LinearLayout
            android:id="@+id/frequencyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            android:layout_below="@+id/track">

            <TextView
                android:id="@+id/frequencyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/frequency"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:textAlignment="center"/>

            <SeekBar
                android:id="@+id/frequencyBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="5" />

        </LinearLayout>

    </RelativeLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signOutBtn"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/sign_out"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        />

    <!-- Storage Encryption DISABLED -->
    <Switch
        android:id="@+id/storage_encryption_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/storage_encryption"
        android:textSize="15sp"
        android:visibility="gone" />
    <!-- Wipe Data DISABLED -->
    <Switch
        android:id="@+id/wipe_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/wipe_data"
        android:textSize="15sp"
        android:visibility="gone" />

</LinearLayout>