<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    android:id="@+id/mainLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@color/background"
        android:layout_centerInParent="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/device_name"
            android:hint="@string/hint_device_name"
            android:inputType="text"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/device_pass"
            android:hint="@string/hint_device_pass"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_btn"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:textSize="15sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:minHeight="24dip"
        android:indeterminate="true"
        android:maxHeight="24dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>